name:                gol20161106
version:             0.1.0.0
synopsis:            Simple Game of Life visualization
description:         Please see README.md
homepage:            https://github.com/stesie/gol20161106#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Siegl
maintainer:          stesie@brokenpipe.de
copyright:           2016 Stefan Siegl
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable gol20161106
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, ansi-terminal, random, split

library
  hs-source-dirs:      src
  build-depends:       base
  exposed-modules:     Board, Rules
  default-language:    Haskell2010

test-suite spec
  build-depends:       base, gol20161106, hspec == 2.*
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  Type:                exitcode-stdio-1.0

